<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">TipHelp</string>
    <string name="app_version">1.2</string>
    <string name="app_copyright">Copyright \u00A9 2015 Hisha Tech</string>
     <string
         name="hishatechPlayStoreURL">https://play.google.com/store/search?q=hishatech&amp;hl=en</string>
    <string name="hishatechString">Play Store: HishaTech</string>

    <string name="lblBillAmount">Bill Amount:</string>
    <string name="lblTipPercent">Tip Amount:</string>
    <string name="ddlTipPercent_prompt">Choose Tip Percentage</string>
    <string name="lblTipAmount">Tip Amount:</string>
    <string name="lblTotal">Total:</string>
    <string name="mnuOptions">Options</string>
    <string name="mnuAbout">About</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnDecimal">.</string>
    <string name="btnEnter">Get Tip</string>
    <string name="btnDel">Del</string>
    <string name="btnClr">Clr</string>
    <string name="DefaultTipPercentTitle">Default Tip Percent</string>
    <string name="DefaultTipPercentSummary">Sets the default tip percentage.</string>

    <!-- V1.1 addition -->
    <string name="lblGroupSize">Party Size:</string>
    <string name="rdoone">1</string>
    <string name="rdotwo">2</string>
    <string name="rdomore">More</string>
    <string name="DefaultGroupSizeTitle">Default Group Size</string>
    <string name="DefaultGroupSizeSummary">Sets the default group size.</string>
    <string name="lblTipAmountGroup">Tip Amount Per Person:</string>
    <string name="lblTotalGroup">Total Per Person:</string>

    <!-- V1.1 addition -->

</resources>