<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:baselineAligned="false"
              android:orientation="vertical">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:id="@+id/lblBillAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblBillAmount"/>

            <EditText
                android:id="@+id/txtBillAmount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="textFilter|textNoSuggestions"/>

        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:id="@+id/lblTipPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTipPercent"/>

            <Spinner
                android:id="@+id/ddlTipPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/TipPercent"
                android:entryValues="@array/TipPercentValues"
                android:gravity="right"
                android:prompt="@string/ddlTipPercent_prompt"/>

        </TableRow>

    </TableLayout>

    <!-- V1.1 addition -->

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:id="@+id/lblGroupSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblGroupSize"/>

            <RadioGroup
                android:id="@+id/rdoGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdoone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdoone"
                    />

                <RadioButton
                    android:id="@+id/rdotwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdotwo"
                    />

                <RadioButton
                    android:id="@+id/rdomore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdomore"
                    />

            </RadioGroup>

            <EditText
                android:id="@+id/txtGroupSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textFilter|textNoSuggestions"/>

        </TableRow>

    </TableLayout>

    <!-- V1.1 addition -->
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stretchColumns="*">

        <TableRow>

            <Button
                android:id="@+id/btn1"
                android:layout_width="90dp"
                android:layout_span="2"
                android:text="@string/btn1"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="90dp"
                android:layout_span="2"
                android:text="@string/btn2"/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="90dp"
                android:layout_span="2"
                android:text="@string/btn3"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn4"
                android:layout_width="90dp"
                android:layout_span="2"
                android:text="@string/btn4"/>

            <Button
                android:id="@+id/btn5"
                android:layout_width="90dp"
                android:layout_span="2"
                android:text="@string/btn5"/>

            <Button
                android:id="@+id/btn6"
                android:layout_width="90dp"
                android:layout_span="2"
                android:text="@string/btn6"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn7"
                android:layout_width="90dp"
                android:layout_span="2"
                android:text="@string/btn7"/>

            <Button
                android:id="@+id/btn8"
                android:layout_width="90dp"
                android:layout_span="2"
                android:text="@string/btn8"/>

            <Button
                android:id="@+id/btn9"
                android:layout_width="90dp"
                android:layout_span="2"
                android:text="@string/btn9"/>

        </TableRow>

        <TableRow>

            <EditText android:background="#000000"/>

            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="90dp"
                android:layout_span="2"
                android:text="@string/btnDecimal"/>

            <Button
                android:id="@+id/btn0"
                android:layout_width="90dp"
                android:layout_span="2"
                android:text="@string/btn0"/>

            <EditText android:background="#000000"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnDel"
                android:layout_width="90dp"
                android:layout_span="2"
                android:text="@string/btnDel"/>

            <Button
                android:id="@+id/btnClr"
                android:layout_width="90dp"
                android:layout_span="2"
                android:text="@string/btnClr"/>

            <Button
                android:id="@+id/btnEnter"
                android:layout_width="90dp"
                android:layout_span="2"
                android:text="@string/btnEnter"/>

        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:id="@+id/lblTipAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTipAmount"/>

            <EditText
                android:id="@+id/txtTipAmount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="textFilter|textNoSuggestions"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/lblTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTotal"/>

            <EditText
                android:id="@+id/txtTotal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="textFilter|textNoSuggestions"/>

        </TableRow>

    </TableLayout>

</LinearLayout>